utils/zerovec/src/snapshots/zerovec__schemars__tests__schema_varzerovec_str.snap
---
source: utils/zerovec/src/schemars.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "VarZeroVec<string>",
  "type": "array",
  "items": {
    "type": "string"
  }
}
