utils/zerovec/src/snapshots/zerovec__schemars__tests__schema_zeromap_u32_str.snap
---
source: utils/zerovec/src/schemars.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ZeroMap<uint32, string>",
  "type": "object",
  "additionalProperties": false,
  "patternProperties": {
    "^\\d+$": {
      "type": "string"
    }
  }
}
