utils/zerovec/src/snapshots/zerovec__schemars__tests__schema_zerovec_u32.snap
---
source: utils/zerovec/src/schemars.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ZeroVec<uint32>",
  "type": "array",
  "items": {
    "type": "integer",
    "format": "uint32",
    "minimum": 0
  }
}
